Added connection config

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   </head>
   <body>
     <img class="banner" src="./assets/banners/banner-eye-transparent.png" />
+
     <ul id="conversation">
     </ul>
+
+    <div id="connection-settings">
+      <input type="text" id="host" placeholder="localhost" /><input type="text" id="port" placeholder="8080" />
+      <input type="submit" id="connect" value="Connect" />
+    </div>
+
     <div id="prompt">
-      <input type="text" id="input" />
+      <input type="text" id="input" placeholder="say something..." />
       <input type="submit" id="send" value="Send" />
       <span id="status-indicator">
         <span id="status-indicator-tooltip">disconnected</span>
