--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Opsdroid Desktop</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <img class="banner" src="./assets/banners/banner-eye-transparent.png" />
