Tidy and improve initial React work

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   <body>
     <img class="banner" src="../assets/banners/banner-eye-transparent.png" />
 
-    <ul id="conversation">
-    </ul>
+    <div id="wrapper">
+    </div>
 
     <div id="connection-settings">
       <input type="text" id="host" placeholder="localhost" /><input type="text" id="port" placeholder="8080" />
