Move components to their own files

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </body>
 
   <script>
-    require('electron-connect').client.create()
-    require('../dist/js/index.js')
+    require('electron-connect').client.create();
+    require('../dist/js/index.js');
   </script>
 </html>
