Refactor sass to match React components

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Opsdroid Desktop</title>
-    <link rel="stylesheet" href="../dist/css/index.css">
+    <link rel="stylesheet" href="../../dist/css/index.css">
   </head>
   <body>
-    <img class="banner" src="../assets/banners/banner-eye-transparent.png" />
+    <img class="banner" src="../../assets/banners/banner-eye-transparent.png" />
 
     <div id="wrapper">
     </div>
@@ -14,6 +14,6 @@
 
   <script>
     require('electron-connect').client.create();
-    require('../dist/js/index.js');
+    require('../../dist/js/index.js');
   </script>
 </html>
