--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,12 +8,11 @@
   <body>
     <img class="banner" src="../../assets/banners/banner-eye-transparent.png" />
 
-    <div id="wrapper">
-    </div>
-  </body>
-
-  <script>
+    <div id="wrapper"></div>
+  
+    <script>
     require('electron-connect').client.create();
     require('../../dist/js/index.js');
   </script>
+    </body
 </html>
